Première version : introduction, profil et parcours

--- a/composer.json
+++ b/composer.json
@@ -4,9 +4,10 @@
         "twig/twig": "^2.1",
         "symfony/translation": "^3.2",
         "symfony/config": "^3.2",
-        "symfony/yaml": "^3.2",
+        "symfony/yaml": "^3.1",
         "symfony/twig-bridge": "^3.2",
         "symfony/templating": "^3.2",
-        "symfony/asset": "^3.2"
+        "symfony/asset": "^3.2",
+        "rpodwika/yaml-config-service-provider": "dev-master"
     }
 }
